--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,11 +6,11 @@
       </h1>
       <div class="icons-header">
         <a aria-label="Send email" href="mailto:{{site.email}}"><i class="icon fa fa-envelope"></i></a>
-        <a aria-label="My Twitter" target="_blank" href="https://twitter.com/{{site.twitter_username}}"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
-        <a aria-label="My Google Plus" target="_blank" href="https://plus.google.com/{{site.gplus_username}}/posts"><i class="icon fa fa-google-plus" aria-hidden="true"></i></a>
+        <a aria-label="My Facebook" target="_blank" href="https://facebook.com/{{site.facebook_username}}"><i class="icon fa fa-facebook" aria-hidden="true"></i></a>
+        <a aria-label="My LinkedIn" target="_blank" href="https://www.linkedin.com/in/{{site.gplus_username}}/posts"><i class="icon fa fa-linkedin" aria-hidden="true"></i></a>
         <a aria-label="My Github" target="_blank" href="https://github.com/{{site.github_username}}"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
       </div>
-      <a class="link" href="#about" data-scroll>About Me</a>
-      <a class="link" href="#projects" data-scroll>Projects</a>
+      <a class="link" href="http://cnls.lanl.gov/External/people/Jeff_Drocco.php" data-scroll>LANL</a>
+      <a class="link" href="https://hpb.llnl.gov/node/96.html" data-scroll>LLNL</a>
   </div>
 </div>
