--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,4 @@
+<a class="link" href="https://arxiv.org/abs/cond-mat/0310291" data-scroll>cond-mat/0310291</a>
 <script src="//d3js.org/d3.v4.min.js"></script>
 <script src="{{ "/assets/js/d3.hexbin.min.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/assets/js/force.js" | prepend: site.baseurl }}"></script>
