--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,3 +1,3 @@
-<div class="content">
+<div class="container">
 <a class="link" href="https://arxiv.org/abs/cond-mat/0310291" data-scroll>cond-mat/0310291</a>
 </div>
