--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
       <div class="icons-header">
         <a aria-label="Send email" href="mailto:{{site.email}}"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My Github" target="_blank" href="https://github.com/{{site.github_username}}"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
-        <a aria-label="My Blocks" target="_blank" href="https://bl.ocks.org/{{site.github_username}}"><i class="icon fa fa-cube" aria-hidden="true"></i></a>
+        <a aria-label="My Blocks" target="_blank" href="http://bl.ocks.org/{{site.github_username}}"><i class="icon fa fa-cube" aria-hidden="true"></i></a>
         <a aria-label="My Publications" target="_blank" href="https://www.ncbi.nlm.nih.gov/pubmed/?term={{site.pubmed_author}}%5BAuthor%5D"><i class="icon fa fa-newspaper-o" aria-hidden="true"></i></a>
       </div>
       <a class="link" href="http://cnls.lanl.gov/External/people/Jeff_Drocco.php" data-scroll>LANL</a>
